somewhat negated shrinking issue with images when wrapped in buttons added aria labels to left and right buttons

--- a/client/src/components/ThumbnailBar.css
+++ b/client/src/components/ThumbnailBar.css
@@ -1,9 +1,12 @@
 .thumbnailImg {
   height: 100px;
+  min-width: 100px;
+  /* width: auto; */
   margin-left: 2px;
   margin-right: 2px;
   border: 1px, solid, red;
 }
+
 #thumbnailBar {
   position: fixed;
   max-width: 500px;
